<resources>
    <string name="app_name">Appcent Mentor Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_feed_available">No feed available.</string>
    <string name="the_trash_is_empty">The trash is empty.</string>
    <string name="add_image">Add Image</string>
    <string name="select_image">Select Image</string>
    <string name="upload_button">Upload</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="recyclerview_row_imageview">Recyclerview row image</string>
    <string name="feed_title">Title</string>
    <string name="feed_description">Description</string>
    <string name="resize">resize</string>
    <string name="trash_date">Date</string>
</resources>