<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/trashRowGridLayout"
    android:layout_width="175dp"
    android:layout_height="wrap_content"
    android:layout_margin="25dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTrashRow"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/trashLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewTrashRow"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/recyclerview_row_imageview"
                android:src="@drawable/image_gallery" />

            <androidx.cardview.widget.CardView
                android:id="@+id/titleCardViewTrash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textViewTitleTrashRow"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/feed_title"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/descriptionCardViewTrash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textViewDescriptionTrashRow"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/feed_description"
                    android:textSize="15sp">

                </TextView>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/dateCardViewTrash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/textViewDateTrashRow"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/trash_date"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</GridLayout>