<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UploadActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewImageView"
        android:layout_width="275dp"
        android:layout_height="275dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/myGrey"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:cropToPadding="true"
            android:onClick="uploadImage"

            android:outlineProvider="background"
            android:src="@drawable/image_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.cardview.widget.CardView>


    <!--
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:onClick="uploadImage"
        android:src="@drawable/image_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundImageView">

    </com.google.android.material.imageview.ShapeableImageView> -->


    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewImageView" />

    <EditText
        android:id="@+id/editTextTextDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle" />


    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextDescription"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="54dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:onClick="camera"
            android:background="@color/myRed"
            android:src="@android:drawable/ic_menu_camera"
            android:textAllCaps="false"
            android:textColor="@color/myGrey"
            tools:layout_editor_absoluteX="264dp"
            tools:layout_editor_absoluteY="539dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:background="@color/myRed"
            android:text="@string/upload_button"
            android:onClick="upload"
            android:textAllCaps="false"
            android:textColor="@color/myGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextDescription" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/select_image"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>