<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewRow"
        android:layout_width="175dp"
        android:layout_height="235dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/myGrey"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/galleryLinearLayout"
            android:layout_width="175dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewDetails"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/recyclerview_row_imageview"
                android:src="@drawable/image_gallery" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textViewTitleDetails"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/feed_title"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textViewDescriptionDetails"
                    android:layout_width="150dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/feed_description"
                    android:textSize="15sp">

                </TextView>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/myGrey">
            <Button
                android:id="@+id/buttonTrash"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_baseline_delete_24"
                android:backgroundTint="@color/black">

            </Button>

        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/buttonShare"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/share_icon"
            android:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>